[project]
name = "langgraph-agent"
version = "0.1.0"
description = ""

authors = [
    {name = "phUR99",email = "skerrigen12@gmail.com"}
]
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.11,<3.13"
langchain = "0.3.1"
langgraph = "0.2.34"
langchain-openai = "0.2.1"
langchain-community = "0.3.1"
langchain-chroma = "0.1.4"
langchain-ollama = "0.2.0"
langchain-google-genai = "2.0.0"
langchain-groq = "0.2.0"
gradio = "4.44.1"
python-dotenv = "1.0.1"
bs4 = "0.0.2"
wikipedia = "1.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# 아래 섹션은 black의 설정
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# 아래 섹션은 flake8의 설정
[tool.flake8]
ignore = "E203, E501, W503"
max-line-length = 88
exclude = ".git,__pycache__,docs/,old/,build/,dist/"